<resources>
    <string name="app_name">ALC Phase 1</string>
    <string name="welcome_message">Welcome to ALC 4.0</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="muna_s_photo">Muna\'s Photo</string>
    <string name="profile_name">Samuel Muna</string>
    <string name="notification_error_ssl_cert_invalid">Access ALC Website?</string>
    <string name="track_android">Track: Android</string>
    <string name="country_kenya">Country: Kenya</string>
    <string name="email">Email: munasikawa@gmail.com</string>
    <string name="phone_number">Phone Number: +254719622019</string>
    <string name="username">Slack Username: @munasikawa</string>
</resources>
